force-app/main/default/objects/Receivables_Sync_Config__c/Receivables_Sync_Config__c.object-meta.xml
<CustomObject>
    <!--
      customSettingsVisibility DELIBERATELY OMITTED - precedent: SharePoint_Config__c and
      Content_Publication_Budget__c (see their .object-meta.xml comments for the full incident
      record). At API 67.0 in this org, declaring customSettingsVisibility (Public or Protected)
      fails deploy with "Property customSettingsVisibility not valid in version 67.0" AND
      cascades into roughly 30 unrelated-looking "Dependent class is invalid" Apex errors on a
      full package deploy. customSettingsVisibility is a managed-package concept governing
      cross-namespace Apex access; this project has no namespace, so there is no boundary for it
      to govern. Access is governed by FLS via permission sets like any other object.

      Hierarchy (not List, not Custom Metadata) per user decision D-AR-6: getOrgDefaults() is
      ZERO SOQL, which is what matters inside a nightly batch, and it allows a per-user override
      for a support principal without a deploy.
    -->
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Runtime configuration for the nightly receivables sync (FSD 5.9.6). Holds the kill switch, the pluggable provider class name, the health-check tolerances and the Case-opening thresholds. Read via getOrgDefaults() - zero SOQL, same as SharePoint_Config__c. NO HARDCODED FALLBACK IS PERMITTED IN APEX: if the org-default row is missing or Is_Enabled__c is false, the run must log a Sync_Run__c with Halt_Reason__c = Disabled and do nothing. Custom Setting DATA is not deployable - the org-default row is a post-deploy Setup step.</description>
    <label>Receivables Sync Config</label>
</CustomObject>