force-app/main/default/objects/Receivables_Sync_Config__c/fields/Is_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Is_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Kill switch for the whole nightly receivables sync. False means the job logs a Sync Run with Halt Reason = Disabled and does nothing else - no mirror write, no Case work. Mirrors SharePoint_Config__c.Is_Enabled__c.</description>
    <inlineHelpText>Untick to stop the nightly receivables sync without a deploy.</inlineHelpText>
    <label>Is Enabled</label>
    <type>Checkbox</type>
</CustomField>