force-app/main/default/objects/Receivables_Sync_Config__c/fields/Minimum_Row_Count__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Row_Count__c</fullName>
    <description>Lower bound for a plausible feed. Fewer rows than this and FSD 5.9.6 step 2 halts rather than treating the missing tenants as resolved. There is no hardcoded fallback in Apex: if this is unset the run halts.</description>
    <inlineHelpText>Halt if the feed returns fewer rows than this.</inlineHelpText>
    <label>Minimum Row Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>