force-app/main/default/objects/Receivables_Sync_Config__c/fields/Staleness_Tolerance_Hours__c.field-meta.xml
<CustomField>
    <fullName>Staleness_Tolerance_Hours__c</fullName>
    <description>How old the FEED’s own as-of timestamp may be before FSD 5.9.6 step 2 halts the run. Measured against Sync_Run__c.Feed_As_Of_DateTime__c, never against the Salesforce clock. There is no hardcoded fallback in Apex: if this is unset the run halts.</description>
    <inlineHelpText>Halt if the Yardi data is older than this many hours.</inlineHelpText>
    <label>Staleness Tolerance Hours</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>